--- a/templates/clerks/approved_list.html
+++ b/templates/clerks/approved_list.html
@@ -3,12 +3,15 @@
 {% block content %}
 <div class="container mt-4">
     <h2 class="text-center mb-4">Approved Applications</h2>
+    
     {% if approved_actions %}
     <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Application</th>
+                <th>Name</th>
+                <th>PRN</th>
+                <th>Department</th>
                 <th>Status</th>
             </tr>
         </thead>
@@ -17,6 +20,8 @@
             <tr>
                 <td>{{ action.tc_application.id }}</td>
                 <td>{{ action.tc_application.name }}</td>
+                <td>{{ action.tc_application.prn }}</td>
+                <td>{{ action.tc_application.department }}</td>
                 <td>{{ action.status }}</td>
             </tr>
             {% endfor %}
